java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/SameNameInnerClass21.java
<error descr="Compact source files contains no 'main' method">public class <error descr="Duplicate class: 'SameNameInnerClass21'">SameNameInnerClass21</error> {

}

int a = 1;</error>